k8-spec/rchain-coop/templates/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rchain-coop
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.global-static-ip-name: www-rchain-coop
spec:
  backend:
    serviceName: rchain-coop
    servicePort: 3000
  rules:
  - host: rchain-coop.tk
    http:
      paths:
        - backend:
            serviceName: rchain-coop
            servicePort: 3000
          path: /
